tests/examples/good/garbage_collector/good523.lat
int main() {
    int[] arr;
    arr = new int[10];
    return 0;
}


class A {
    int a;
}

