tests/examples/bad/bad006.lat
int main() {
    int[] a;
    a[true] = 1;
    return 1;
}
 


